--- a/src/css/ATIclass.css
+++ b/src/css/ATIclass.css
@@ -14,12 +14,27 @@ my-nav {
 
 .purplebody {
     background:#2e1247;
-  
+    width: 100%;
+    height: 100%;    
+    padding: auto;
+    position:relative;
+
+
 }
 
 .navbar-default {
     background-color:#2e1247;
     border: 0px;
+    position: fixed;
+    width: 100%;
+    height: 10%;
+    top: 0px;
+
+}
+#Barriba{
+    width: 100%;
+    align-content: center;
+    border-bottom: 1px solid white;
 }
 
 .selection {
@@ -47,11 +62,11 @@ label {
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-     color: #58416c;
+    color: #58416c;
 }
 
 .navbar-default .navbar-nav > li > a {
- color: #fff;    
+    color: #fff;    
 }
 
 .navbar-default .navbar-nav > li > a:hover,
@@ -73,15 +88,18 @@ label {
 }
 
 .Supercenter {
-    position: fixed;
+    position: relative;
     width: 400px;
     height: 400px;
     top: 380px;
     left: 50%;
+    padding: auto;
     transform: translate(-50%,-50%);
     color: white;
     text-align: center;
-    z-index: -1;
+    z-index: 1;
+
+
 }
 
 .Supercenter > h5 {
@@ -115,7 +133,7 @@ label {
     background-color: #4a3262;
     padding: 10px;
     height: 70px;
-    
+
 }
 
 .sidebar-item:hover,
@@ -124,13 +142,13 @@ label {
 }
 
 .sidebar-item-pic {
-  height: 50px;
-  width: 50px;
-  background-color: white;
-  float:left;
-  border-radius: 25px;
-  border: 2px solid #25ea1f;
-  box-shadow: 2px 2px 3px #2f1348;
+    height: 50px;
+    width: 50px;
+    background-color: white;
+    float:left;
+    border-radius: 25px;
+    border: 2px solid #25ea1f;
+    box-shadow: 2px 2px 3px #2f1348;
 }
 
 .sidebar-item-content {
@@ -175,3 +193,145 @@ label {
     padding: 10px;
     height: 70px;
 }
+
+.punto{
+    color: white;
+    background-color: transparent;
+    text-align: center;
+    padding: auto;
+    text-align: justify;
+    margin-top:20px;
+    padding: 50px 80px;
+
+}
+.plantilla{
+    position:relative;
+    color: white;
+    background-color: transparent;
+    text-align: center;
+    padding: auto;
+    text-align: justify;
+    margin-top:20px;
+    padding: 50px 80px;
+
+}
+#espacio1{
+    background-image: url("https://noticiassin.com/wp-content/uploads/2015/03/Cielo-2.jpg");
+    opacity: 0.65;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 20%;
+    opacity: 2;
+    padding: 50px 80px;
+    letter-spacing: 10px;
+    margin-top:250px;
+
+
+
+}
+#espacio2{
+    background-image: url("http://www.droneguide.es/wp-content/uploads/2015/11/imagen-manos-estrechandose-4.jpg");
+    opacity: 0.65;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 20%;
+    opacity: 2;
+    padding: 50px 80px;
+    letter-spacing: 10px;
+
+
+
+}
+#colores{
+    color: black;
+
+}
+.caption{
+    text-align: center;
+    padding: 75px;   
+    font: 400 15px/1.8 "Lato", sans-serif;
+    font-family: "Lato", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 1.8;
+    font-size-adjust: none;
+    font-stretch: normal;
+    -x-system-font: none;
+    font-feature-settings: normal;
+    font-language-override: normal;
+    font-kerning: auto;
+    font-variant-alternates: normal;
+    font-variant-caps: normal;
+    font-variant-east-asian: normal;
+    font-variant-ligatures: normal;
+    font-variant-numeric: normal;
+    font-variant-position: normal;
+}
+#menu2{
+
+    padding: 0px;
+    width: 100%;
+    text-align: justify;
+}
+.boton_personalizado > input{
+    button.css3button {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 14px;
+        color: #ffffff;
+        padding: 10px 20px;
+        background: -moz-linear-gradient(
+            top,
+            #ff6600 0%,
+            #ff6600 25%,
+            #ff6600);
+        background: -webkit-gradient(
+            linear, left top, left bottom,
+            from(#ff6600),
+            color-stop(0.25, #ff6600),
+            to(#ff6600));
+        -moz-border-radius: 6px;
+        -webkit-border-radius: 6px;
+        border-radius: 6px;
+        border: 1px solid #b85f00;
+        -moz-box-shadow:
+            0px 1px 3px rgba(000,000,000,0.5),
+            inset 0px -1px 0px rgba(255,255,255,0.7);
+        -webkit-box-shadow:
+            0px 1px 3px rgba(000,000,000,0.5),
+            inset 0px -1px 0px rgba(255,255,255,0.7);
+        box-shadow:
+            0px 1px 3px rgba(000,000,000,0.5),
+            inset 0px -1px 0px rgba(255,255,255,0.7);
+        text-shadow:
+            0px -1px 1px rgba(000,000,000,0.2),
+            0px 1px 0px rgba(255,255,255,0.3);
+    }
+
+
+}
+p{
+    animation-duration: 2s;
+    animation-name: slidein;
+}
+a{
+    -webkit-transition:  2s;
+}
+/*@keyframes slidein{
+    from{
+        margin-left:20%;
+        width:150%;
+    }
+    to{
+        margin-left:0%;
+        width:100%;
+    }
+}*/
+
+
