--- a/src/css/jerarquia_1.css
+++ b/src/css/jerarquia_1.css
@@ -1,3 +1,8 @@
+* a:hover{
+    color: white !important;
+    text-decoration: none !important;
+}
+
 .tree , .tree ul , .tree li {
     position: relative;
 }
