Div y nuevo bonbardeo de CSSs

--- a/src/css/ATIclass_Dashboard.css
+++ b/src/css/ATIclass_Dashboard.css
@@ -4,6 +4,11 @@
     text-decoration: none !important;
 }
 
+* a:focus {
+    color: white !important;
+    text-decoration: none !important;
+}
+
 .timer {
     z-index: 4;
 }
