--- a/src/css/cuadroBienvenido.css
+++ b/src/css/cuadroBienvenido.css
@@ -2,6 +2,10 @@
     color: white !important;
     text-decoration: none !important;
 }
+* a:focus {
+    color: white !important;
+    text-decoration: none !important;
+}
 
 body{
     background: #40255b;
