--- a/src/css/ATIclass.css
+++ b/src/css/ATIclass.css
@@ -2,6 +2,10 @@
     color: white !important;
     text-decoration: none !important;
 }
+* a:focus {
+    color: white !important;
+    text-decoration: none !important;
+}
 
 my-nav {
     position: absolute;
