--- a/src/css/jerarquia_1.css
+++ b/src/css/jerarquia_1.css
@@ -2,6 +2,10 @@
     color: white !important;
     text-decoration: none !important;
 }
+* a:focus {
+    color: white !important;
+    text-decoration: none !important;
+}
 
 .tree , .tree ul , .tree li {
     position: relative;
